--- a/03-Python-for-Data-Analysis-Pandas/practice-dataframe.ipynb
+++ b/03-Python-for-Data-Analysis-Pandas/practice-dataframe.ipynb
@@ -2388,17 +2388,557 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fac54968-c34c-451d-91a4-92db46fbfbe9",
+   "metadata": {},
+   "source": [
+    "# Multi-Index and Index Hierarchy\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "baff63ba-c081-46ba-afc8-b4476932d5a2",
+   "execution_count": 99,
+   "id": "6f58f396-0012-426c-8792-6f55e70c7382",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from numpy.random import randn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "e1f3868a-5085-48c2-b7c6-2b17de342014",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Index Levels\n",
+    "outside = ['G1','G1','G1','G2','G2','G2']\n",
+    "inside = [1,2,3,1,2,3]\n",
+    "hier_index = list(zip(outside,inside))\n",
+    "hier_index = pd.MultiIndex.from_tuples(hier_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "3c6ae83e-a5e6-4f6f-acd1-b65046c479b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['G1', 'G1', 'G1', 'G2', 'G2', 'G2']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outside"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "4860bc7a-0819-47a0-b8ba-93ec56858c80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inside"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "2e101ac3-8552-4c81-81b6-2c47ec151bb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('G1', 1), ('G1', 2), ('G1', 3), ('G2', 1), ('G2', 2), ('G2', 3)]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(outside,inside))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "af08b4ff-f3f7-4d11-bc09-38744f447cdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex([('G1', 1),\n",
+       "            ('G1', 2),\n",
+       "            ('G1', 3),\n",
+       "            ('G2', 1),\n",
+       "            ('G2', 2),\n",
+       "            ('G2', 3)],\n",
+       "           )"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " pd.MultiIndex.from_tuples(hier_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "655926f7-e4fb-483a-b8b2-fb9c4c6554ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">G1</th>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.005187</td>\n",
+       "      <td>-0.741790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.187125</td>\n",
+       "      <td>-0.732845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.382920</td>\n",
+       "      <td>1.482495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">G2</th>\n",
+       "      <th>1</th>\n",
+       "      <td>0.961458</td>\n",
+       "      <td>-2.141212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.992573</td>\n",
+       "      <td>1.192241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.046780</td>\n",
+       "      <td>1.292765</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             A         B\n",
+       "G1 1 -1.005187 -0.741790\n",
+       "   2  0.187125 -0.732845\n",
+       "   3 -1.382920  1.482495\n",
+       "G2 1  0.961458 -2.141212\n",
+       "   2  0.992573  1.192241\n",
+       "   3 -1.046780  1.292765"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(randn(6,2),hier_index,['A','B'])\n",
+    "df # example for multi-index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "c747e0e4-28cb-4b7c-a273-bde7cb900612",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.005187</td>\n",
+       "      <td>-0.741790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.187125</td>\n",
+       "      <td>-0.732845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.382920</td>\n",
+       "      <td>1.482495</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B\n",
+       "1 -1.005187 -0.741790\n",
+       "2  0.187125 -0.732845\n",
+       "3 -1.382920  1.482495"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# access data from multi level index, frst acces outside index then go deeper.\n",
+    "df.loc['G1']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "221d22f1-7c31-4b2f-88de-f42c2f5b5bfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A   -1.005187\n",
+       "B   -0.741790\n",
+       "Name: 1, dtype: float64"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc['G1'].loc[1] # return in series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "f112f83c-99aa-4d2f-ab92-2c342226f5ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Groups</th>\n",
+       "      <th>Num</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">G1</th>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.005187</td>\n",
+       "      <td>-0.741790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.187125</td>\n",
+       "      <td>-0.732845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.382920</td>\n",
+       "      <td>1.482495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">G2</th>\n",
+       "      <th>1</th>\n",
+       "      <td>0.961458</td>\n",
+       "      <td>-2.141212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.992573</td>\n",
+       "      <td>1.192241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.046780</td>\n",
+       "      <td>1.292765</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   A         B\n",
+       "Groups Num                    \n",
+       "G1     1   -1.005187 -0.741790\n",
+       "       2    0.187125 -0.732845\n",
+       "       3   -1.382920  1.482495\n",
+       "G2     1    0.961458 -2.141212\n",
+       "       2    0.992573  1.192241\n",
+       "       3   -1.046780  1.292765"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# give naming for indexies\n",
+    "df.index.names = ['Groups','Num']\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "b3e5cfff-73aa-4151-9887-3d60d41e8d9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.9614581560918355)"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# access single data\n",
+    "df.loc['G2'].loc[1]['A']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "05ede944-7060-4d57-9dd2-cc17e55bc484",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.xs of                    A         B\n",
+       "Groups Num                    \n",
+       "G1     1   -1.005187 -0.741790\n",
+       "       2    0.187125 -0.732845\n",
+       "       3   -1.382920  1.482495\n",
+       "G2     1    0.961458 -2.141212\n",
+       "       2    0.992573  1.192241\n",
+       "       3   -1.046780  1.292765>"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#cross section it has the ability to skip or go inside a multilevel index\n",
+    "df.xs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "5653d30f-3b25-415a-b906-dcdab7af7354",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Num</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.005187</td>\n",
+       "      <td>-0.741790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.187125</td>\n",
+       "      <td>-0.732845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.382920</td>\n",
+       "      <td>1.482495</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            A         B\n",
+       "Num                    \n",
+       "1   -1.005187 -0.741790\n",
+       "2    0.187125 -0.732845\n",
+       "3   -1.382920  1.482495"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.xs('G1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "7e5dfd20-f49f-4cc6-b2db-d878438b2b13",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'num' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[127], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# if i want row 1 fronm both g1 and g2 \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df\u001b[38;5;241m.\u001b[39mxs(\u001b[38;5;241m1\u001b[39m,level\u001b[38;5;241m=\u001b[39mnum)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'num' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# if i want row 1 fronm both g1 and g2 \n",
+    "df.xs(1,level=num)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1f3868a-5085-48c2-b7c6-2b17de342014",
+   "id": "6f60f609-0d54-4c2c-bf0e-2d82b272f1dd",
    "metadata": {},
    "outputs": [],
    "source": []
